--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently -n 'server,serverChat,serverChat' \"nodemon server.js\" \"nodemon serverChat.js\" \"npm run start\""
+    "dev": "concurrently -n 'server,client' \"node server.js\"  \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
